--- a/Config.yaml
+++ b/Config.yaml
@@ -7,17 +7,21 @@
 # One PC name per line
 TargetList: 'C:/Temp/testtargets.txt'
 
+Debug: Yes
 
 BasicPaths:
   
-  # Path to regular, non-numbered image to be used.
-  RegularImagePath : '//doit-files/ATEC/CTS/CTS_Distribution/23_Summer/Background.jpg'
+  ImageSourcePaths:
+    CTS_RegularImagePath : '//doit-files/ATEC/CTS/CTS_Distribution/23_Summer/Background.jpg'
+    ITSS_Labs_RegularImagePath : ''
+    ITSS_RegularImagePath : ''
 
   # Local, non-UNC path that the altered image will be saved to.  (Set your GPO to this)
   # Note: if updating wallpaper, make sure you set this to a unique name, because Windows
   LocalDestination : 'C:/DesktopWallpaper23_24.jpg'  
 
-  LogFileDirectory : 'C:/Temp'
+  # Logs are saved to your machine
+  LogFileDirectory : 'C:/Temp/WallpaperLogs'
 
   AssetTagHive: 'REGISTRY::HKEY_LOCAL_MACHINE/SOFTWARE/Chico'
 
@@ -29,11 +33,21 @@ PythonVersion : '3.11'
 
 Ownership :
 
-  # Computer ownership is determined through matching naming patterns
+  DepartmentRegexPatterns : 
+    '^SC-{1}[a-zA-Z]{3,4}\d{3,4}-{1}\d{1,2}' : 'CTS, SPECIAL'
+    '^SC-{1}[a-zA-Z]{3,4}\d{3,4}' :            'CTS, Classroom'
+    '^CONF-{1}[a-zA-Z]{3,4}\d{3,4}' :          'CTS, Conference'
+    '^[a-zA-Z]{1}\d{5}-{1}.*$' :               'ITSS, Labs'
+    '^[a-zA-Z]{1}\d{5}$' :                     'ITSS'   
+
   DepartmentKeywords :
-    'SC-' : 'CTS'
-    'CONF-' : 'CTS'
-  
+    'SC-*' : 'CTS'
+    'CONF-*' : 'CTS'
+
+  DepartmentOU :
+    'Classrooms' : 'CTS'
+    'Conference' : 'CTS'
+
   # If we can't find a match to determine ownership, fallback to this group
   Fallback : 'ITSS'
 
