EOD working with async

--- a/Config.yaml
+++ b/Config.yaml
@@ -3,14 +3,14 @@
 # IMPORTANT: write paths Unix-style with '/' NOT Windows-style with '\'
 # Booleans are Yes or no
 
+
 # Txt file containing PC names you want to create wallpapers for
 # One PC name per line
 TargetList: 'C:/Temp/testtargets.txt'
 
-Debug: Yes
 
 BasicPaths:
-  
+
   ImageSourcePaths:
     CTS_RegularImagePath : '//doit-files/ATEC/CTS/CTS_Distribution/23_Summer/Background.jpg'
     ITSS_Labs_RegularImagePath : ''
@@ -20,19 +20,16 @@ BasicPaths:
   # Note: if updating wallpaper, make sure you set this to a unique name, because Windows
   LocalDestination : 'C:/DesktopWallpaper23_24.jpg'  
 
-  # Logs are saved to your machine
   LogFileDirectory : 'C:/Temp/WallpaperLogs'
 
   AssetTagHive: 'REGISTRY::HKEY_LOCAL_MACHINE/SOFTWARE/Chico'
 
   AssetTag_REG_SZ: 'Chico_AssetTag'
   
-# Major and minor version installed on this machine.  Example: '3.11'
-PythonVersion : '3.11'
-
 
 Ownership :
-
+  
+  # Used for strict name matching
   DepartmentRegexPatterns : 
     '^SC-{1}[a-zA-Z]{3,4}\d{3,4}-{1}\d{1,2}' : 'CTS, SPECIAL'
     '^SC-{1}[a-zA-Z]{3,4}\d{3,4}' :            'CTS, Classroom'
@@ -40,34 +37,26 @@ Ownership :
     '^[a-zA-Z]{1}\d{5}-{1}.*$' :               'ITSS, Labs'
     '^[a-zA-Z]{1}\d{5}$' :                     'ITSS'   
 
+  # Used for loose name matching
   DepartmentKeywords :
     'SC-*' : 'CTS'
     'CONF-*' : 'CTS'
 
+  # used for Get-ADComputer matching
   DepartmentOU :
     'Classrooms' : 'CTS'
     'Conference' : 'CTS'
+    'GLNN 104' : 'ITSS'
 
   # If we can't find a match to determine ownership, fallback to this group
   Fallback : 'ITSS'
 
-  # Department : Text that will be written
+  # 'Department' : 'Text that will be written below PC name and Asset Tag number'
   ContactStrings:
     'CTS' : 'Classroom Technology Services x5475'
     'ITSS' : 'IT Support Services x4357'
 
-  
-SpecialNumberedWallpaper:
-  
-  # Leave no if ITSS (for now)
-  SpecialRoomDetection : Yes
-  
-  NumberedBackgroundDirectory : '//doit-files/ATEC/CTS/CTS_Distribution/23_Summer/Background Numbered'
-  
-  # Rooms that receive station-numbered wallpapers
-  SpecialRooms:
-    'SC-THMA116' : 13
-    'SC-YOLO234' : 7
-    'SC-AJH110' : 3
-    'SC-MLIB442' : 7
-  
+
+TextPosition:
+  X: 1400
+  Y: 1125
